--- a/templates/all_members.html
+++ b/templates/all_members.html
@@ -4,6 +4,7 @@
 
 <h1>Members</h1>
   <h2>hello world</h2>
+  <h3>hello world</h3>
 <ul>
   {% for x in mymembers %}
     <li>{{ x.firstname }} {{ x.lastname }}</li>
