--- a/templates/all_members.html
+++ b/templates/all_members.html
@@ -7,7 +7,7 @@
   <h3>hello world</h3>
 <ul>
   {% for x in mymembers %}
-    <li>{{ x.firstname }} {{ x.lastname }}</li>
+    <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
   {% endfor %}
 </ul>
 
