--- a/templates/all_members.html
+++ b/templates/all_members.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<html>
-<body>
+{% extends "master.html" %}
 
-<h1>Members</h1>
-  <h2>hello world</h2>
-  <h3>hello world</h3>
-<ul>
-  {% for x in mymembers %}
-    <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
-  {% endfor %}
-</ul>
+{% block title %}
+  My Tennis Club - List of all members
+{% endblock %}
 
-</body>
-</html>
+
+{% block content %}
+<p><a href="/">HOME</a></p>
+  <h1>Members</h1>
+  
+  <ul>
+    {% for x in mymembers %}
+      <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
+    {% endfor %}
+  </ul>
+{% endblock %}      
